[gd_scene load_steps=11 format=1]

[ext_resource path="res://script/Effect_GRACITY.gd" type="Script" id=1]
[ext_resource path="res://image/gravity_orb.png" type="Texture" id=2]
[ext_resource path="res://image/stone.png" type="Texture" id=3]
[ext_resource path="res://scene/character/gravity_effect_fade.tres" type="Animation" id=4]
[ext_resource path="res://scene/character/gravity_effect_idle.tres" type="Animation" id=5]
[ext_resource path="res://scene/character/gravity_effect_show_up.tres" type="Animation" id=6]
[ext_resource path="res://sound/hole.ogg" type="AudioStream" id=7]

[sub_resource type="ColorRamp" id=1]

offsets = FloatArray( 0, 0.00369004, 0.99631, 1 )
colors = ColorArray( 0, 0, 0, 1, 0.945313, 0, 1, 0.523373, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 71.9464

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 28.1085

[node name="Effect_GRAVITY" type="Node2D"]

visibility/behind_parent = true
z/z = -1
script/script = ExtResource( 1 )
duration = 6
gravity = 500

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, -0.902496 )
transform/rot = -60.0
texture = ExtResource( 2 )

[node name="Rocks" type="Particles2D" parent="."]

editor/display_folded = true
transform/rot = -4.0
transform/scale = Vector2( 0.25, 0.25 )
config/amount = 50
config/lifetime = 2.5
config/process_mode = 1
config/half_extents = Vector2( 500, 500 )
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 30.0
params/linear_velocity = 0.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = -35.0
params/tangential_accel = -20.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.0
params/final_size = 1.1
params/hue_variation = 0.5
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 0.5
randomness/radial_accel = 0.2
randomness/tangential_accel = 0.2
randomness/initial_angle = 0.5
randomness/final_size = 0.2
randomness/hue_variation = 0.5
color/color_ramp = SubResource( 1 )
emission_points = Vector2Array( 0.534, 0.342, -0.31, 0.558, 0.63, -0.088, 0.612, 0.18, -0.524, -0.382, 0.274, 0.57, -0.196, 0.61, 0.258, 0.578, -0.618, -0.184, -0.542, 0.346, -0.562, -0.308, -0.642, 0.038, -0.564, 0.302, -0.492, -0.42, 0.584, 0.252, 0.344, -0.542, -0.636, -0.05, 0.616, -0.174, -0.394, 0.498, 0.574, 0.278, -0.046, -0.638, 0.248, 0.59, 0.62, -0.136, 0.472, 0.422, -0.058, 0.638, -0.326, 0.552, 0.492, 0.396, -0.612, -0.206, 0.38, -0.518, 0.61, 0.178, -0.514, 0.374, 0.078, 0.632, 0.638, -0.018, -0.642, 0.02, -0.6, 0.212, 0.61, -0.188, -0.576, -0.28, 0.05, 0.63, -0.116, -0.636, -0.642, -0.038, -0.644, -0.042, 0.512, -0.378, -0.638, -0.068, -0.406, 0.492, -0.118, -0.636, -0.566, 0.304, -0.328, -0.558, -0.636, 0.028, -0.206, 0.602, 0.136, 0.62, -0.634, 0.064, 0.144, 0.616, -0.484, -0.42, -0.456, -0.454, 0.634, -0.08, -0.496, -0.406, -0.524, -0.38, 0.382, -0.516, 0.112, -0.63, -0.564, 0.302, 0.392, -0.504, -0.148, 0.614, -0.52, 0.376, -0.164, 0.616, -0.284, 0.572, -0.126, 0.624, -0.416, 0.482, 0.512, 0.378, -0.278, 0.574, -0.168, -0.618, -0.026, -0.646, -0.584, -0.28, 0.374, 0.518, 0.496, 0.39, 0.588, 0.24, 0.538, -0.344, 0.422, 0.474, -0.288, 0.57, -0.506, 0.396, 0.636, -0.07, 0.436, 0.46, 0.47, -0.436, -0.418, -0.494, -0.07, 0.63, -0.502, -0.406, 0.56, -0.308, -0.348, 0.534, 0.536, 0.34, -0.256, -0.594, 0.002, -0.644, 0.51, 0.38, 0.532, -0.352, 0.626, -0.122, -0.156, -0.624, 0.626, 0.114, -0.244, -0.6, 0.334, -0.544, 0.43, 0.472, 0, -0.646, 0.212, 0.604, -0.638, 0.088, -0.622, -0.178, -0.252, 0.588, 0.174, -0.618, 0.564, -0.292, -0.61, 0.204, 0.306, 0.552, 0.614, -0.186, 0.622, -0.124, -0.084, 0.632, -0.27, -0.586, 0.514, -0.376, -0.198, -0.612, -0.626, -0.146, 0.116, -0.636, 0.544, 0.32, -0.532, -0.366, -0.506, 0.398, -0.508, 0.396, -0.1, 0.632, -0.364, -0.536, -0.594, 0.248, -0.25, 0.584, 0.598, 0.216, -0.322, -0.556, -0.576, 0.284, -0.38, -0.52, -0.356, -0.532, 0.13, 0.622, -0.538, -0.354, -0.51, 0.388, -0.634, -0.104, -0.626, -0.142, -0.004, -0.64, -0.64, -0.088, -0.46, 0.448, 0.188, 0.612, 0.472, 0.43, 0.04, -0.642, 0.632, -0.078, 0.61, 0.168, 0.346, 0.538, -0.266, -0.59, -0.256, 0.586, -0.628, 0.142, -0.64, 0.032, 0.342, 0.538, 0.094, -0.634, -0.066, 0.638, 0.544, -0.334, -0.584, 0.274, -0.446, -0.468, 0.356, 0.522, -0.302, 0.558, 0.634, 0.084, -0.634, 0.076, 0.096, 0.626, 0.604, 0.206, -0.54, 0.35, 0.018, -0.642, -0.594, -0.24, 0.628, 0.106, 0.386, 0.51, 0.638, 0.06, -0.598, 0.236, 0.028, -0.638, 0.632, -0.064, -0.036, -0.646, -0.554, 0.32, 0.112, 0.626, -0.636, -0.08, 0.634, 0.034, 0.622, -0.154, 0.564, -0.306, -0.646, -0.01, 0.268, -0.584, -0.622, 0.174, -0.64, 0.092, -0.512, -0.392, 0.356, -0.528, 0.104, 0.628, 0.466, -0.438, 0.006, -0.644, -0.29, 0.568, -0.642, -0.008, -0.134, 0.626, 0.446, -0.458, 0.4, -0.504, 0.544, 0.332, -0.64, -0.008, -0.358, 0.532, -0.644, -0.008, -0.614, 0.2, 0.204, 0.598, -0.508, -0.396, -0.596, -0.246, -0.16, -0.624, -0.338, -0.55, -0.35, 0.536, -0.334, -0.546, -0.56, -0.318, 0.634, 0.058, -0.294, -0.574, -0.048, -0.638, 0.3, 0.562, -0.35, -0.536, 0.59, -0.234, -0.046, 0.632, 0.104, -0.63, -0.07, 0.632, 0.216, 0.602, 0.214, -0.602, -0.532, -0.366, -0.336, 0.536, -0.132, -0.634, -0.204, -0.608, -0.496, 0.41, 0.554, 0.318, 0.49, -0.41, -0.166, -0.62, -0.59, 0.246, -0.442, 0.468, -0.382, -0.52, 0.424, 0.47, 0.568, -0.286, -0.592, -0.258, 0.458, 0.44, -0.642, 0.074, 0.128, -0.634, 0.552, -0.318, -0.436, -0.474, -0.45, 0.448, 0.54, 0.332, -0.418, 0.476, -0.318, 0.554, -0.26, -0.594, 0.008, -0.642, 0.49, 0.398, 0.41, 0.488, -0.27, -0.58, -0.618, -0.184, 0.56, -0.316, 0.544, 0.33, -0.31, -0.568, 0.632, -0.054, -0.548, -0.33, -0.62, -0.164, 0.442, -0.46, -0.414, -0.488, -0.44, 0.466, -0.506, -0.406, -0.6, -0.232, 0.172, 0.614, 0.414, 0.482, 0.176, 0.606, 0.112, 0.622, 0.468, 0.432, -0.594, 0.232, 0.454, -0.45, -0.512, -0.39, 0.134, -0.626, 0.292, -0.568, -0.636, 0.082, 0.61, -0.194, 0.532, 0.346, -0.568, -0.292, -0.196, -0.618, -0.466, 0.432, -0.122, -0.636, -0.532, -0.36, -0.634, -0.092, -0.19, -0.614, -0.458, 0.446, -0.59, 0.26, -0.44, -0.468, -0.158, 0.616, 0.442, 0.45, -0.15, -0.622, 0.526, -0.368, -0.59, -0.266, 0.578, -0.27, -0.116, -0.636, -0.418, -0.492, -0.274, 0.574, 0.252, 0.588, -0.642, 0.04, -0.214, -0.606, 0.624, -0.136, 0.636, -0.084, -0.504, 0.388, 0.06, -0.638, -0.256, -0.59, 0.096, 0.626, 0.62, -0.154, 0.098, 0.63, -0.53, 0.356, -0.602, -0.23, 0.548, -0.324, -0.536, -0.348, -0.432, -0.474, -0.252, -0.588, -0.124, 0.622, -0.338, 0.538, -0.644, 0.032, 0.6, 0.206, -0.46, -0.454, 0.636, 0.03, 0.352, 0.53, -0.31, -0.56, 0.174, 0.608, -0.268, 0.58, 0.552, -0.324, 0.114, 0.63, 0.616, 0.156, -0.488, 0.42, -0.606, 0.198, 0.612, -0.194, 0.372, -0.522, 0.126, 0.62, -0.458, 0.444, 0.48, -0.428, -0.396, -0.512, -0.614, -0.188, 0.388, -0.514, -0.64, -0.048, -0.362, -0.528, 0.51, 0.376, 0.624, 0.136, 0.48, -0.422, -0.084, -0.642, 0.134, 0.62, -0.636, -0.068, -0.42, -0.482, -0.106, -0.632, -0.444, -0.46, -0.392, -0.516, 0.398, 0.492, -0.542, -0.346, 0.384, -0.514, -0.27, -0.588, -0.63, 0.112, -0.292, 0.57, 0.398, 0.492, 0.604, 0.202, -0.196, -0.61, 0.634, 0.02, -0.582, 0.256, -0.49, -0.416, -0.636, 0.088, 0.6, 0.218, -0.474, 0.43, -0.536, -0.362, -0.186, -0.616, -0.636, 0.098, -0.06, -0.644, -0.552, 0.318, 0.424, 0.468, 0.054, -0.64, 0.448, 0.452, -0.632, -0.114, -0.632, 0.104, -0.24, 0.59, -0.164, -0.626, -0.294, -0.576, -0.532, 0.362, -0.536, 0.356, -0.62, -0.176, -0.48, -0.422, 0.612, 0.16, 0.482, -0.416, 0.632, 0.072, 0.614, 0.158, -0.642, 0.036, -0.268, -0.58, 0.584, -0.266, 0.534, 0.34, 0.318, 0.55, -0.632, -0.092, 0.372, -0.52, 0.614, 0.17, 0.622, -0.146, -0.43, -0.482, -0.596, -0.234, 0.014, 0.638, 0.484, 0.414, -0.422, -0.482, 0.394, 0.496, -0.082, -0.634, 0.574, 0.268, -0.252, 0.58, 0.542, -0.346, -0.028, -0.644, -0.248, -0.594, 0.508, 0.386, 0.072, -0.64, 0.394, 0.498, -0.366, 0.528, 0.6, -0.23, 0.638, -0.052, -0.142, -0.626, 0.596, 0.23, 0.384, 0.51, -0.634, 0.07, 0.624, -0.118, 0.64, -0.018, 0.61, -0.188, -0.306, 0.556, -0.278, -0.576, 0.11, 0.626, -0.206, 0.6, -0.432, -0.476, 0.122, 0.628, 0.014, 0.632, -0.578, 0.272, 0.48, -0.428, 0.118, 0.626, -0.618, 0.154, 0.484, 0.414, -0.064, 0.628, 0.226, -0.604, -0.628, -0.152, -0.274, -0.58, -0.424, 0.48, -0.292, 0.572, 0.396, -0.506, 0.004, -0.642, 0.374, 0.51, -0.316, 0.548, 0.6, 0.208, -0.628, 0.122, 0.548, -0.324, -0.638, 0.008, -0.348, 0.54, -0.538, 0.346, -0.024, 0.632, 0.18, 0.614, -0.644, 0.016, 0.512, 0.38, 0.024, 0.632, -0.258, 0.584, -0.624, -0.144, -0.62, 0.182, 0.638, -0.02, 0.5, 0.392, -0.604, 0.228, -0.506, -0.402, 0.468, 0.424, -0.1, -0.632, -0.008, 0.636, -0.322, 0.554, 0.478, 0.42, 0.458, 0.438, -0.624, -0.142, 0.548, -0.324, -0.584, 0.25, -0.644, 0.026, -0.558, 0.324, -0.122, -0.63, -0.294, 0.57, 0.438, 0.46, 0.596, 0.232, -0.596, 0.248, -0.636, -0.098, -0.54, -0.352, 0.48, -0.418, -0.364, 0.524, -0.164, 0.618, 0.014, -0.64, 0.504, 0.384, -0.454, 0.456, 0.398, -0.506, -0.588, 0.24, -0.042, -0.638, 0.418, -0.48, -0.484, 0.412, -0.632, -0.084, -0.612, -0.204, -0.234, 0.59, 0.166, 0.614, 0.49, -0.41, 0.42, 0.474, 0.492, -0.414, -0.57, -0.288, 0.42, -0.48, 0.49, -0.41, 0.614, 0.178, 0.64, -0.042, -0.3, 0.566, 0.636, 0.058, -0.01, -0.644, -0.454, 0.456, -0.59, 0.262, 0.316, 0.554, -0.074, -0.642, 0.262, -0.59, -0.638, -0.042, -0.538, -0.352, 0.308, -0.558, -0.408, -0.496, 0.128, 0.622, -0.372, -0.526, 0.464, -0.446, -0.4, 0.5, 0.266, 0.58, -0.05, -0.644, 0.518, 0.366, 0.488, 0.41, -0.428, -0.486, -0.542, -0.35, 0.48, -0.418, -0.094, -0.638, 0.416, -0.486 )

[node name="ParticleAttractor2D" type="ParticleAttractor2D" parent="Rocks"]

visibility/opacity = 0.0
transform/pos = Vector2( 0, -2.65204 )
transform/scale = Vector2( 4, 4 )
enabled = true
radius = 20.0
disable_radius = 40.0
gravity = 20.0
absorption = 50.0
particles_path = NodePath("..")

[node name="effect_anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade = ExtResource( 4 )
anims/idle = ExtResource( 5 )
anims/show_up = ExtResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="fade_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Absorb_area" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 500.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Absorb_area"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Disappear_area" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Disappear_area"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="finished" from="effect_anim" to="." method="_on_effect_anim_finished"]

[connection signal="timeout" from="fade_timer" to="." method="_on_fade_timer_timeout"]

[connection signal="body_enter" from="Disappear_area" to="." method="_on_Disappear_area_body_enter"]


